--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 		"autoAudits": false,
 		"checkInvalidKey": true
 	},
-	"appid": "wx12464d3e7cd7931b",
+	"appid": "wx1c415eb52fe7f500",
 	"projectname": "miniprogram-test-2",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
