--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 		"checkInvalidKey": true
 	},
 	"appid": "wx1c415eb52fe7f500",
-	"projectname": "miniprogram-test-2",
+	"projectname": "PALS",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
